<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/title_library" />
        <item
            android:id="@+id/nav_travaux"
            android:icon="@drawable/ic_baseline_work_24"
            android:title="@string/title_works" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/title_count" />


    </group>



</menu>